[package]
name = "logplotter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1.0.95"
ctrlc = "3.4"
yaml-rust2 = "0.10.0"
regex = "1.11.1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["tokio", "http1"]}
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
