[package]
name = "logplotter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
anyhow = "1.0.95"
ctrlc = "3.4"
yaml-rust2 = "0.10.0"
regex = "1.11.1"
tokio = { version = "1", features = ["full"] }
poem = { version = "3.1.7", features = ["static-files"] }
serde = { version = "1.0.218", features = ["derive"] }
rand = { version = "0", features = ["small_rng"] }
serde_json = {version = "1"}
